...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_menu_pic5">

    <Button
        android:id="@+id/buttonToDeckBuilder"
        android:layout_width="130dp"
        android:layout_height="63dp"
        android:text="@string/deck_builder_home"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonToPacks"
        app:layout_constraintStart_toStartOf="parent"
...

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonToMarketplace" />

    <Button
        android:id="@+id/buttonToTradeUp"
        android:layout_width="130dp"
        android:layout_height="63dp"
        android:text="Trade Up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonToTrading" />
...
