...
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="#a23423"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/startDeckCreationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/create_new_deck"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/addToDeckButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="140dp"
                    android:text="@string/add_to_deck"
...
