<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="20dp">

    <TextView
        android:id="@+id/deck_issue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/issue" />
</LinearLayout>